src/Assets/Styles/_projects.scss
.projectPage {

    .fullscreenGalleryWrapper {
        position: fixed;
        z-index: 1000;
        width: 100%;

        .fullscreenGallery {
            background-color: rgba(0,0,0, 0.5);
            height: 100vh;
            object-fit: cover;
            display: flex;
            position: static;
            top: 0 ;
            left: 0;
            flex-flow: column nowrap;
            justify-content: center;
            gap: 2rem;
            align-items: center;

            .imageBlock {
                display: flex;
                flex-flow: column nowrap;
                justify-content: center;
                gap: 1rem;
                align-items: center;
                max-height: 90vh;
                
                
                // .imageScroll {
                //     margin: auto;
                //     width: 50%;
                //     // display: flex;
                //     // flex-flow: column nowrap;
                //     // justify-content: start;
                //     // align-items: center;
                //     overflow-y: scroll;   
                //     // max-width: 100%;

                    img {
                        // box-shadow: 0px 0px 20px 5px rgba(255,255,255,0.4);
                        max-height: 80vh;
                        // max-width: 40%;
                        
                    }
                // }

                // .imageScroll::-webkit-scrollbar {
                //     display: none;
                //   }

                p {
                    font-size: 1.25rem;
                    background-color: white;
                    padding: 0.5rem 1.5rem;
                    border-radius: 5px;
                }
            }

            .info {
                background-color: lightgray;
                padding: 0.25rem 0.5rem;
                font-size: 0.75rem;
                border-radius: 5px;
            }
        }
    }

    .projectHeaderWrapper {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }

    .projectHeader  {
        padding-top: 6rem;
        padding-bottom: 2rem;
        margin: auto;
        max-width: 1200px;

        h1 {
            text-align: center;
            margin: 3rem auto 2rem auto;
        }
    
        h2 {
            text-align: center;
            margin: 2rem auto;
            padding: 0;
        }
    }

    .links {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 2rem;
        max-width: 1200px;
        margin: auto;
        padding: 2rem 0;
    }

    .projectLinkList {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 2rem;
        margin-top: 3rem;
    }

    .projectContent {
        margin: auto;
        max-width: 896px;

        h2 {
            margin: 4rem 0 2.5rem 0;
            padding: 0;
        }

        h3 {
            margin: 2.5rem 0 0 0;
            // padding: 0 0 1.5rem 0;
            text-align: center;
        }

        
        .techStack {
            .techStackList {
                display: flex;
                flex-flow: row wrap;
                justify-content: space-between;
                max-width: 896px;
                margin: auto;
                gap: 1rem;
        
                @include sizeDesktop {
                    gap: 2rem;
                }
        
                li {
                    width: 120px;
                    display: flex;
                    flex-flow: row wrap;
                    align-items: flex-end;
                    justify-content: center;
                    list-style-type: none;
                    gap: 0.5rem;
                    
                    
                    @include sizeDesktop {
                        
                    }
                    
                    p {
                        display: flex;
                        justify-content: center;
                        font-size: 3rem;
                        
                        img {
                            border-radius: 0.5rem;
                        }
                    }
        
                    .name {
                        font-size: 0.6rem;
                        align-self: flex-end;
                    }
                }
            }
        }

        .projectTextImage {
            margin: 0 auto 5rem auto;
            max-width: 896px;
            display: grid;
            grid-template-columns: 1fr 1fr;
            gap: 2.5rem;
            justify-content: center;
            align-items: center;
            text-align: justify;
        }

        .video {
            margin: 3rem auto 2rem;

            * {
                width: 100%;
            }
        }

        p {
            margin: 0 0 1.5rem 0;
            max-width: 896px;
        }

        img {
            margin: 0 auto;
        }
    }

    

    .projectGallery {
        h2 {
            padding: 2rem 0 1rem 0;
            grid-column: -1 / 1;
        }
        .projectGalleryGrid {
            display: grid;
            grid-template-columns: 1fr 1fr 1fr;
            gap: 1rem;
            margin: auto;
            max-width: 1200px;
            align-items: center;
            justify-content: center;
            margin-bottom: 6rem;
    
            img {
                width: 300px;
                max-height: 300px;
                object-position: 0% 0%;
                object-fit: cover;
                transition: scale 0.5s;
                border-radius: 1rem;
                transition: scale 0.5s, filter 0.5s;
                filter: brightness(0.8);
            }
    
            img:hover {
                scale: 1.01;
                transition: scale 0.5s, filter 0.5s;
                filter: brightness(1);
                cursor: pointer;
            }
    
            * {
                margin: auto;
                text-align: center;
                max-width: 400px;
            }
        }
    }
}

